mutants.out.old/log/crates__diffguard-diff__src__unified.rs_line_341_col_5.log

*** crates/diffguard-diff/src/unified.rs:341:5: replace parse_hunk_header -> Result<HunkHeader, DiffParseError> with Ok(Default::default())

*** mutation diff:
--- crates/diffguard-diff/src/unified.rs
+++ replace parse_hunk_header -> Result<HunkHeader, DiffParseError> with Ok(Default::default())
@@ -333,32 +333,17 @@
     old_start: u32,
     new_start: u32,
 }
 
 fn parse_hunk_header(line: &str) -> Result<HunkHeader, DiffParseError> {
     // Formats:
     // @@ -1,2 +3,4 @@
     // @@ -1 +3 @@
-    let minus = line
-        .split_whitespace()
-        .nth(1)
-        .ok_or_else(|| DiffParseError::MalformedHunkHeader(line.to_string()))?;
-    let plus = line
-        .split_whitespace()
-        .nth(2)
-        .ok_or_else(|| DiffParseError::MalformedHunkHeader(line.to_string()))?;
-
-    let old_start = parse_hunk_range_start(minus, '-', line)?;
-    let new_start = parse_hunk_range_start(plus, '+', line)?;
-
-    Ok(HunkHeader {
-        old_start,
-        new_start,
-    })
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn parse_hunk_range_start(
     token: &str,
     expected_prefix: char,
     full_line: &str,
 ) -> Result<u32, DiffParseError> {
     let range = token


*** /home/hermes/.rustup/toolchains/1.92.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=diffguard-diff@0.2.0
       Fresh unicode-ident v1.0.24
       Fresh cfg-if v1.0.4
       Fresh bitflags v2.11.0
       Fresh proc-macro2 v1.0.106
       Fresh linux-raw-sys v0.12.1
       Fresh autocfg v1.5.0
       Fresh once_cell v1.21.4
       Fresh itoa v1.0.18
       Fresh memchr v2.8.0
       Fresh fastrand v2.3.0
       Fresh quote v1.0.45
       Fresh libc v0.2.184
       Fresh serde_core v1.0.228
       Fresh zmij v1.0.21
       Fresh rustix v1.1.4
       Fresh zerocopy v0.8.48
       Fresh dyn-clone v1.0.20
       Fresh bit-vec v0.8.0
       Fresh quick-error v1.2.3
       Fresh fnv v1.0.7
       Fresh unarray v0.1.4
       Fresh similar v2.7.0
       Fresh regex-syntax v0.8.10
       Fresh syn v2.0.117
       Fresh getrandom v0.3.4
       Fresh getrandom v0.4.2
       Fresh serde_json v1.0.149
       Fresh ppv-lite86 v0.2.21
       Fresh wait-timeout v0.2.1
       Fresh bit-set v0.8.0
       Fresh console v0.16.3
       Fresh serde_derive v1.0.228
       Fresh rand_core v0.9.5
       Fresh serde_derive_internals v0.29.1
       Fresh ref-cast-impl v1.0.25
       Fresh tempfile v3.27.0
       Fresh thiserror-impl v2.0.18
       Fresh anyhow v1.0.102
       Fresh num-traits v0.2.19
       Fresh serde v1.0.228
       Fresh schemars_derive v1.2.1
       Fresh ref-cast v1.0.25
       Fresh rusty-fork v0.3.1
       Fresh rand_xorshift v0.4.0
       Fresh rand v0.9.2
       Fresh rand_chacha v0.9.0
       Fresh thiserror v2.0.18
       Fresh schemars v1.2.1
       Fresh insta v1.47.2
       Fresh proptest v1.11.0
       Fresh diffguard-types v0.2.0 (/tmp/cargo-mutants-diffguard-GBqBRA.tmp/crates/diffguard-types)
       Dirty diffguard-diff v0.2.0 (/tmp/cargo-mutants-diffguard-GBqBRA.tmp/crates/diffguard-diff): the file `crates/diffguard-diff/src/unified.rs` has changed (1775668293.134018588s, 2s after last build at 1775668291.219946967s)
   Compiling diffguard-diff v0.2.0 (/tmp/cargo-mutants-diffguard-GBqBRA.tmp/crates/diffguard-diff)
     Running `/home/hermes/.rustup/toolchains/1.92.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name diffguard_diff --edition=2024 crates/diffguard-diff/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=52f023dbcd3d5200 -C extra-filename=-b586ecc3194d33f5 --out-dir /tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libanyhow-dcc2beb2eec72907.rlib --extern diffguard_types=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libdiffguard_types-1b033e1bf3017415.rlib --extern insta=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libinsta-b5319b7a6520a570.rlib --extern proptest=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libproptest-369c3590d9fa4491.rlib --extern thiserror=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libthiserror-15f09e27eff85921.rlib`
     Running `/home/hermes/.rustup/toolchains/1.92.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name diffguard_diff --edition=2024 crates/diffguard-diff/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=817c377025fcbe9e -C extra-filename=-c73328382a27267f --out-dir /tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libanyhow-dcc2beb2eec72907.rmeta --extern diffguard_types=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libdiffguard_types-1b033e1bf3017415.rmeta --extern thiserror=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libthiserror-15f09e27eff85921.rmeta`
error[E0277]: the trait bound `HunkHeader: Default` is not satisfied
   --> crates/diffguard-diff/src/unified.rs:341:8
    |
341 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `HunkHeader`
    |
help: consider annotating `HunkHeader` with `#[derive(Default)]`
    |
332 + #[derive(Default)]
333 | struct HunkHeader {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `diffguard-diff` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/hermes/.rustup/toolchains/1.92.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name diffguard_diff --edition=2024 crates/diffguard-diff/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=817c377025fcbe9e -C extra-filename=-c73328382a27267f --out-dir /tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libanyhow-dcc2beb2eec72907.rmeta --extern diffguard_types=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libdiffguard_types-1b033e1bf3017415.rmeta --extern thiserror=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libthiserror-15f09e27eff85921.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `diffguard-diff` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/hermes/.rustup/toolchains/1.92.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name diffguard_diff --edition=2024 crates/diffguard-diff/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=52f023dbcd3d5200 -C extra-filename=-b586ecc3194d33f5 --out-dir /tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libanyhow-dcc2beb2eec72907.rlib --extern diffguard_types=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libdiffguard_types-1b033e1bf3017415.rlib --extern insta=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libinsta-b5319b7a6520a570.rlib --extern proptest=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libproptest-369c3590d9fa4491.rlib --extern thiserror=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libthiserror-15f09e27eff85921.rlib` (exit status: 1)

*** result: Failure(101)
